[tool.poetry]
name = "webapp-ui-tests"
version = "0.1.0"
description = ""
authors = ["Zach Smith <zach.smith2171@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
selenium = "^4.16.0"
behave = "^1.2.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
